# SourceCommentTranslator

./: .gitignore  .project  .pydevproject  README.md  setup.cfg
src/socot/: __init__.py  __main__.py  __version__.py
