[metadata]
name = socot
version = attr: socot.__version__
url = https://github.com/p--q/SourceCommentTranslator
author = P--Q
author_email = pq.blogspot@gmail.com
classifiers =
	Development Status :: 3 - Alpha 
    Environment :: Console  
    Intended Audience :: Developers  
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only  
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Localization
    Topic :: Utilities
description = Source comment translator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.5

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
	socot = socot:main
